//protocol=10008;
option java_package = "com.chuangyou.common.protobuf.pb";
option java_outer_classname = "PlayerKillMonsterProto";
//通知center。玩家杀死怪物
message PlayerKillMonsterMsg {
	required int64 playerId = 1;
	required int32 monsterTemplateId = 2;
	optional int32 type = 3;//1 怪物 2 人物
}
